Start tidying  dataset

--- a/correlational-analysis.qmd
+++ b/correlational-analysis.qmd
@@ -139,12 +139,39 @@ weather_data <- dfs$weather_data$weather_ksf
 #### ksf_clam_growth_data
 
 ```{r}
+#| eval: false
+#| echo: false
+new_var_names <- c("sort_date", "color", "clams_in_count", "clams_in_lbs", "clams_in_avg_per_lb",
+  "clams_out_count", "clams_out_lbs", "clams_out_avg_per_lb", "growth_in_lbs",
+  "growth_pct", "sr", "days_btwn_sort")
+
+ %>%
+  slice(-1) %>%
+  setNames(new_var_names) %>%
+  pivot_longer(
+    cols = c(clams_in_count, clams_in_lbs, clams_in_avg_per_lb,
+             clams_out_count, clams_out_lbs, clams_out_avg_per_lb),
+    names_to = c("stage", ".value"),
+    names_prefix = "clams_", 
+    names_sep = "_", 
+    values_to = "value"
+  ) %>%
+  mutate(stage = if_else(str_detect(stage, "in"), "In", "Out")) %>%
+  rename(avg_per_lbs = avg) %>% 
+  mutate(across(c(color, stage), as.factor)) %>%
+  mutate(across(c(count, lbs, avg_per_lbs, growth_in_lbs, growth_pct, sr), ~as.numeric(gsub("[^0-9.-]", "", .)))) %>% 
+  arrange(sort_date, color, stage) %>% 
+  dplyr::select(sort_date, days_btwn_sort, color, stage, count, lbs, avg_per_lbs, 
+                growth_in_lbs, growth_pct, sr)
+```
+
+```{r}
 #| label: tidy-ksf-clam-growth-data-dataset
 #| code-fold: true
 #| code-summary: <i>Steps to clean data</i>
 ksf_clam_growth_data_tidied <- ksf_clam_growth_data
 
-paged_table(ksf_clam_growth_data)
+paged_table(ksf_clam_growth_data_tidied)
 ```
 
 #### ksf_compiled_data
@@ -190,7 +217,7 @@ sort by `date`
 
 ksf_oyster_cylinder_growth_data_tidied <- ksf_oyster_cylinder_growth_data
 
-paged_table(ksf_oyster_cylinder_growth_data)
+paged_table(ksf_oyster_cylinder_growth_data_tidied)
 ```
 
 #### profile_data
@@ -201,7 +228,7 @@ paged_table(ksf_oyster_cylinder_growth_data)
 #| code-summary: <i>Steps to clean data</i>
 profile_data_tidied <- profile_data
 
-paged_table(profile_data)
+paged_table(profile_data_tidied)
 ```
 
 #### water_samples_data
@@ -212,7 +239,7 @@ paged_table(profile_data)
 #| code-summary: <i>Steps to clean data</i>
 water_samples_data_tidied <- water_samples_data
 
-paged_table(water_samples_data)
+paged_table(water_samples_data_tidied)
 ```
 
 #### weather_data
@@ -223,7 +250,7 @@ paged_table(water_samples_data)
 #| code-summary: <i>Steps to clean data</i>
 weather_data_tidied <- weather_data
 
-paged_table(weather_data)
+paged_table(weather_data_tidied)
 ```
 
 ::: 
@@ -240,4 +267,8 @@ write.csv(ksf_compiled_data_tidied, file = "data/tidied/ksf_compiled_data_tidied
 
 Export merged final data set into `data/outputs` folder.
 
+## Data Dictionary
 
+## Exploratory Data Analysis
+
+## Correlational Analysis
