--- a/index.qmd
+++ b/index.qmd
@@ -10,7 +10,6 @@ format:
   html:
     toc-title: "Data Analysis Workflow:"
     toc-location: left
-
 ---
 
 ::: {.callout title="Interactive Code"}
@@ -79,7 +78,7 @@ Use the `purrr::map()` function to iteratively import all files in the `files_to
 #| warnings: false
 #| eval: false
 dfs <- map(files_to_import, import_list) # <1>
-save(dfs, file = "data/raw/dfs.RData") # <1>
+save(dfs, file = "data/raw/2024-02-28_dfs.RData") # <1>
 ```
 
 1. It takes a while to import these dataframes, so we're going to only import
@@ -89,7 +88,7 @@ Efficiently load import raw data:
 
 ```{r}
 #| label: efficiently-load-raw-data
-load("data/raw/dfs.RData")
+load("data/raw/2024-02-28_dfs.RData")
 ```
 
 Rename datasets:
@@ -120,7 +119,7 @@ dfs <- map(dfs, ~ set_names(.x, gsub(" ", "_", tolower(names(.x)))))
 
 ```{r}
 #| label: create-separate-datasets
-
+ksf_clam_growth_data <- dfs$ksf_clam_growth$sheet1
 ksf_compiled_data <- dfs$ksf_compiled_data$full_data
 ksf_oyster_cylinder_growth_data <- dfs$ksf_oyster_cylinder_growth$sheet1
 profile_data <- dfs$profile_data$final_data
@@ -132,11 +131,38 @@ weather_data <- dfs$weather_data$weather_ksf
 
 ::: {.panel-tabset}
 
-<<<<<<< HEAD:correlational-analysis.qmd
+#### ksf_clam_growth_data
 
+```{r}
+#| label: tidy-ksf-clam-growth-data-dataset
+#| code-fold: true
+#| code-summary: <i>Steps to clean data</i>
+new_var_names <- c("sort_date", "color", "clams_in_count", "clams_in_lbs", "clams_in_avg_per_lb",
+                   "clams_out_count", "clams_out_lbs", "clams_out_avg_per_lb", "growth_in_lbs",
+                   "growth_pct", "sr", "days_btwn_sort")
 
-=======
->>>>>>> cc67da9c47b11ab41c091f49426d9b85a5fafe5c:index.qmd
+ksf_clam_growth_data_tidied <- ksf_clam_growth_data %>%
+  slice(-1) %>%
+  setNames(new_var_names) %>%
+  pivot_longer(
+    cols = c(clams_in_count, clams_in_lbs, clams_in_avg_per_lb,
+             clams_out_count, clams_out_lbs, clams_out_avg_per_lb),
+    names_to = c("stage", ".value"),
+    names_prefix = "clams_", 
+    names_sep = "_", 
+    values_to = "value"
+  ) %>%
+  mutate(stage = if_else(str_detect(stage, "in"), "In", "Out")) %>%
+  rename(avg_per_lbs = avg) %>% 
+  mutate(across(c(color, stage), as.factor)) %>%
+  mutate(across(c(count, lbs, avg_per_lbs, growth_in_lbs, growth_pct, sr), ~as.numeric(gsub("[^0-9.-]", "", .)))) %>% 
+  arrange(sort_date, color, stage) %>% 
+  dplyr::select(sort_date, days_btwn_sort, color, stage, count, lbs, avg_per_lbs, 
+                growth_in_lbs, growth_pct, sr)
+
+paged_table(ksf_clam_growth_data_tidied)
+```
+
 #### ksf_compiled_data
 
 ```{r}
