--- a/index.qmd
+++ b/index.qmd
@@ -76,19 +76,28 @@ Use the `purrr::map()` function to iteratively import all files in the `files_to
 #| label: iteratively-import-raw-data
 #| messages: false
 #| warnings: false
-#| eval: false
-dfs <- map(files_to_import, import_list) # <1>
-save(dfs, file = "data/raw/2024-02-28_dfs.RData") # <1>
+
+dfs_no_profiles <- map(files_to_import[c(1:3, 5, 6)], import_list) # <1>
+
+save(dfs_no_profiles, file = "data/raw/2024-03-01_dfs_no_profiles.RData") # <1>
 ```
 
-1. It takes a while to import these dataframes, so we're going to only import
+```{r}
+sheets_to_import <- c("L1", "L2", "L3", "L4")
+profiles_data <- profiles_data <- map_dfr(sheets_to_import, function(sheet_name) {
+  import(files_to_import[4], which = sheet_name)
+}) %>% 
+  bind_rows()
+```
+
+1. It takes a while to import these dataframes, so we're going to only import.
 it once and then export it as a .RData file to load it back in more efficiently
 
 Efficiently load import raw data:
 
 ```{r}
 #| label: efficiently-load-raw-data
-load("data/raw/2024-02-28_dfs.RData")
+# load("data/raw/2024-03-dfs_no_profiles.RData") 
 ```
 
 Rename datasets:
@@ -97,9 +106,9 @@ We will always use snakecase when naming our data objects and functions (e.g., `
 
 ```{r}
 #| label: rename-raw-datasets
-names(dfs) <- gsub("data/raw/2024-02-28_|\\.xlsx$|\\.xls$", "", files_to_import) # <1>
-names(dfs) <- gsub("-", "_", names(dfs)) # <2>
-names(dfs) # <3>
+names(dfs_no_profiles) <- gsub("data/raw/2024-02-28_|\\.xlsx$|\\.xls$", "", files_to_import[c(1:3, 5, 6)]) # <1>
+names(dfs_no_profiles) <- gsub("-", "_", names(dfs_no_profiles)) # <2>
+names(dfs_no_profiles) # <3>
 ```
 
 1. Remove prefixes and file extensions
@@ -110,7 +119,7 @@ Rename each sheet within each raw dataset to be lowercased and replace spaces wi
 
 ```{r}
 #| label: rename-sheets-within-each-raw-dataset
-dfs <- map(dfs, ~ set_names(.x, gsub(" ", "_", tolower(names(.x)))))
+dfs_no_profiles <- map(dfs_no_profiles, ~ set_names(.x, gsub(" ", "_", tolower(names(.x)))))
 ```
 
 ## Tidy Raw Data
@@ -119,12 +128,11 @@ dfs <- map(dfs, ~ set_names(.x, gsub(" ", "_", tolower(names(.x)))))
 
 ```{r}
 #| label: create-separate-datasets
-ksf_clam_growth_data <- dfs$ksf_clam_growth$sheet1
-ksf_compiled_data <- dfs$ksf_compiled_data$full_data
-ksf_oyster_cylinder_growth_data <- dfs$ksf_oyster_cylinder_growth$sheet1
-profile_data <- dfs$profile_data$final_data
-water_samples_data <- dfs$water_samples$data_overview
-weather_data <- dfs$weather_data$weather_ksf
+ksf_clam_growth_data <- dfs_no_profiles$ksf_clam_growth$sheet1
+ksf_compiled_data <- dfs_no_profiles$ksf_compiled_data$full_data
+ksf_oyster_cylinder_growth_data <- dfs_no_profiles$ksf_oyster_cylinder_growth$sheet1
+water_samples_data <- dfs_no_profiles$water_samples$data_overview
+weather_data <- dfs_no_profiles$weather_data$weather_ksf
 ```
 
 ### Tidying Processes
@@ -141,10 +149,14 @@ new_var_names <- c("sort_date", "color", "clams_in_count", "clams_in_lbs", "clam
                    "clams_out_count", "clams_out_lbs", "clams_out_avg_per_lb", "growth_in_lbs",
                    "growth_pct", "sr", "days_btwn_sort")
 
+new_date_col <- c("2023-10-17", "2023-12-06", "2023-12-12", "2024-01-02", "2024-01-10", "2024-01-24", "2024-01-31", "2024-02-08", "2024-02-13") 
+
 ksf_clam_growth_data_tidied <- ksf_clam_growth_data %>%
   slice(-1) %>%
   setNames(new_var_names) %>%
-  pivot_longer(
+  mutate(date = as.Date(new_date_col)) %>% 
+  dplyr::select(-sort_date) %>% 
+   pivot_longer(
     cols = c(clams_in_count, clams_in_lbs, clams_in_avg_per_lb,
              clams_out_count, clams_out_lbs, clams_out_avg_per_lb),
     names_to = c("stage", ".value"),
@@ -155,13 +167,20 @@ ksf_clam_growth_data_tidied <- ksf_clam_growth_data %>%
   mutate(stage = if_else(str_detect(stage, "in"), "In", "Out")) %>%
   rename(avg_per_lbs = avg) %>% 
   mutate(across(c(color, stage), as.factor)) %>%
-  mutate(across(c(count, lbs, avg_per_lbs, growth_in_lbs, growth_pct, sr), ~as.numeric(gsub("[^0-9.-]", "", .)))) %>% 
-  arrange(sort_date, color, stage) %>% 
-  dplyr::select(sort_date, days_btwn_sort, color, stage, count, lbs, avg_per_lbs, 
+  mutate(across(c(count, lbs, avg_per_lbs, growth_in_lbs, growth_pct, sr), ~as.numeric(gsub("%", "", .)))) %>% 
+  arrange(date, color, stage) %>% 
+  dplyr::select(date, days_btwn_sort, color, stage, count, lbs, avg_per_lbs, 
                 growth_in_lbs, growth_pct, sr)
 
 paged_table(ksf_clam_growth_data_tidied)
 ```
+
+1.
+2.
+3.
+4.
+5.
+6.
 
 #### ksf_compiled_data
 
@@ -242,9 +261,9 @@ paged_table(ksf_oyster_cylinder_growth_data_tidied)
 #| label: tidy-profile-data-dataset
 #| code-fold: true
 #| code-summary: <i>Steps to clean data</i>
-profile_data_tidied <- profile_data
+profiles_data_tidied <- profiles_data
 
-paged_table(profile_data_tidied)
+paged_table(profiles_data_tidied)
 ```
 
 #### water_samples_data
@@ -253,10 +272,24 @@ paged_table(profile_data_tidied)
 #| label: tidy-water-samples-data-dataset
 #| code-fold: true
 #| code-summary: <i>Steps to clean data</i>
-water_samples_data_tidied <- water_samples_data
+water_samples_data_tidied <- water_samples_data %>%
+   rename_with(~gsub("\\s*\\([^\\)]+\\)", "", .x)) %>% # <1>
+  janitor::clean_names() %>% # <1>
+   mutate(
+    date = case_when(
+      grepl("^\\d{2}/\\d{2}/\\d{4}$", date) ~ ymd(date),
+     date == "44074" ~ as.Date("2024-01-09"),
+     TRUE ~ as.Date(date, format = "%Y-%m-%d")
+    )
+  )
 
 paged_table(water_samples_data_tidied)
 ```
+
+Date format
+Date number conversion
+Names clean up
+Add numbers to sample ID
 
 #### weather_data
 
